--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".makeScreenByFrag.MainActivity"
-        >
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".makeScreenByFrag.MainActivity"
+    >
+  
+  <fragment
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:name="com.example.day2.makeScreenByFrag.ListFragment"
+      android:id="@+id/listFragment"
+      tools:layout="@layout/fragment_list"
+      />
+  
+  <fragment
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:name="com.example.day2.makeScreenByFrag.ViewerFragment"
+      android:id="@+id/viewerFragment"
+      tools:layout="@layout/fragment_viewer"
+      />
 
-  </androidx.constraintlayout.widget.ConstraintLayout >
+  
+  </LinearLayout >
