--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,18 +11,23 @@
           android:id="@+id/menu_refresh"
           android:title="새로고침"
           app:showAsAction="always"
+          android:orderInCategory="101"
           />
   
-  <item
-          android:id="@+id/menu_search"
-          android:title="검색"
-          app:showAsAction="always"
-          />
-  
-  <item
-          android:id="@+id/menu_settings"
-          android:title="설정"
-          app:showAsAction="always"
-          />
+    
+    <item
+            android:id="@+id/menu_settings"
+            android:title="설정"
+            app:showAsAction="never"
+            android:orderInCategory="103"
+            />
     <!--showAsAction : 메뉴를 항상 보이게 할 것인지 아니면 숨겨 둘 것인지...-->
+    <item
+            android:id="@+id/menu_search"
+            android:title="검색"
+            android:orderInCategory="102"
+            app:showAsAction="always|withText"
+            android:actionLayout="@layout/search_layout"
+            
+            />
   </menu >
