--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,35 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Day2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
+<resources>
+	  <!-- Material theme (day/night vesion) for activities. -->
+	  <style name = "Theme.AppCompat.DayNight" parent = "Theme.AppCompat" />
+	  <!-- Variant of AppCompat.DayNight that has a solid (opaque) action bar
+           with an inverse color profile. The dark action bar sharply stands out against
+           the light content (when applicable).  -->
+	  <style name = "Theme.AppCompat.DayNight.DarkActionBar" parent = "Theme.AppCompat" />
+	  <!-- Variant of AppCompat.DayNight with no action bar.  -->
+	  <style name = "Theme.AppCompat.DayNight.NoActionBar" parent = "Theme.AppCompat.NoActionBar" />
+	  <!-- Material theme (day/night vesion) for dialog windows and activities,
+           which is used by the {@link android.support.v7.app.Dialog} class. This changes
+           the window to be floating (not fill the entire screen), and puts a
+           frame around its contents. You can set this theme on an activity if
+           you would like to make an activity that looks like a Dialog. -->
+	  <style name = "Theme.AppCompat.DayNight.Dialog" parent = "Theme.AppCompat.Dialog" />
+	  <!-- Variant of Theme.AppCompat.DayNight.Dialog that has a nice minimum width for
+           a regular dialog. -->
+	  <style name = "Theme.AppCompat.DayNight.Dialog.MinWidth" parent = "Theme.AppCompat.Dialog.MinWidth" />
+	  <!-- Theme for a window that will be displayed either full-screen on
+           smaller screens (small, normal) or as a dialog on larger screens
+           (large, xlarge). -->
+	  <style name = "Theme.AppCompat.DayNight.DialogWhenLarge" parent = "Theme.AppCompat.DialogWhenLarge" />
+	  <!-- Material user theme for alert dialog windows, which is used by the
+           {@link android.support.v7.app.AlertDialog} class. -->
+	  <style name = "Theme.AppCompat.DayNight.Dialog.Alert" parent = "Theme.AppCompat.Dialog.Alert" />
+	  
+	  <style name = "Theme.Day2.NoActionBar">
+			<item name = "windowActionBar">false</item>
+			<item name = "windowNoTitle">true</item>
+	  </style>
+	  
+	  <style name = "Theme.Day2.AppBarOverlay" parent = "ThemeOverlay.AppCompat.Dark.ActionBar" />
+	  
+	  <style name = "Theme.Day2.PopupOverlay" parent = "ThemeOverlay.AppCompat.Light" />
 </resources>
