--- a/app/src/main/res/layout/person_item.xml
+++ b/app/src/main/res/layout/person_item.xml
@@ -2,21 +2,20 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     >
     
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="50dp"
+        app:cardBackgroundColor="#FFFFFFFF"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
+        
         >
-        <!--cardElevation : 뷰가 올라온 느낌-->
-        <!--기본 패딩 적용-->
         
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +32,6 @@
                 />
             
             <LinearLayout
-                android:id="@+id/layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -53,15 +51,14 @@
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:textColor="#ff0000ff"
                     android:text="전화번호"
+                    android:textColor="#FF0000FF"
+                    android:textSize="25sp"
                     />
             
             </LinearLayout >
         
         </LinearLayout >
-    
     </androidx.cardview.widget.CardView >
 
 </LinearLayout >
